--- a/src/main.css
+++ b/src/main.css
@@ -10,3 +10,13 @@ body {
   font-family: "Bangers";
   background: url('./anthony-delanoix-PxrRwO4CwAI-unsplash.jpg');
 }
+a {text-decoration: none;}
+a:hover {
+  text-decoration: underline;
+}
+svg {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  margin-left: 1rem;
+}
