--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,15 @@ body {
   display: none;
   font-size: 2rem;
   font-family: "Bangers";
-  background: url('./anthony-delanoix-PxrRwO4CwAI-unsplash.jpg');
+}
+html::before {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-image: url('./anthony-delanoix-PxrRwO4CwAI-unsplash.jpg');
+  filter: grayscale(100%) brightness(50%);
 }
 a {text-decoration: none;}
 a:hover {
